# TicketToken2

./: BACKEND_STRUCTURE.md  fill-empty-files-simple.sh
admin-portal/: .env.example  .eslintrc.json  .gitignore  FOLDER_STRUCTURE.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
admin-portal/src/: App.tsx  index.css  index.tsx
backend/: .env.example  .gitignore  app.js  package.json  server.js
backend/config/: accessConfig.js  auth.js  database.js  db.js  index.js  redis.js  storage.js
backend/controllers/: accessController.js  artistAnalyticsController.js  authController.js  contentAccess.js  contentAccessController.js  contentController.js  eventController.js  marketplaceController.js  nftAccessController.js  profileController.js  ticketController.js  tokenGatedContentController.js  userController.js  (+2 more)
blockchain/: README.md  package.json
smart-contracts/: Anchor.toml  README.md  package.json
smart-contracts/programs/governance/: Cargo.toml  README.md
smart-contracts/programs/governance/src/: errors.rs  lib.rs  mod.rs
smart-contracts/programs/governance/src/instructions/: cancel_proposal.rs  cast_vote.rs  create_proposal.rs  delegate_votes.rs  execute_proposals.rs  initialize_governance.rs  mod.rs
smart-contracts/programs/governance/src/state/: governance.rs  proposal.rs  vote.rs
smart-contracts/programs/marketplace/: Cargo.toml  README.md
smart-contracts/programs/marketplace/src/: errors.rs  lib.rs  mod.rs
smart-contracts/programs/marketplace/src/instructions/: buy_ticket.rs  cancel_listing.rs  claim_bid_refund.rs  create_escrow.rs  create_listing.rs  end_auction.rs  initialize.rs  initiate_dispute.rs  mod.rs  pause_marketplace.rs  place_bid.rs  release_escrow.rs  resolve_dispute.rs  unpause_marketplace.rs  update_marketplace_fee.rs  utils.rs  withdraw_fees.rs
smart-contracts/programs/marketplace/src/state/: auction.rs  listing.rs  mod.rs  royalty.rs
smart-contracts/programs/tickettoken/: Cargo.toml
smart-contracts/programs/tickettoken/src/: errors.rs  lib.rs  state.rs
smart-contracts/programs/tickettoken/src/instructions/: cancel_listing.rs  create_listing.rs  distribute_royalty.rs  grant_content_access.rs  initialize.rs  mint_ticket.rs  mod.rs  set_up_pause.rs  transfer_ticket.rs  update_fees.rs  update_metadata.rs  use_ticket.rs  verify_ownership.rs
(+299 files in other folders)
